CO1-T17 Develop CK Editor plugin to embed FF Videos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body id="main">
 
-<main>
+<main style="padding-top: 20px;">
 	<div class="adjoined-bottom">
 		<div class="grid-container">
 			<div class="grid-width-100">
